--- a/post/2020-12-11-first-post.Rmd
+++ b/post/2020-12-11-first-post.Rmd
@@ -18,6 +18,7 @@ library(reticulate)
 
 ```{python}
 #Python
+#import pandas as pd
 #import seaborn as sns
 #df = sns.load_dataset('diamonds')
 ```
@@ -47,4 +48,8 @@ library(reticulate)
 #Python
 #np.dot(mat1, mat2).round()
 
+```
+
+```{R}
+#I tried repeatedly to get these reticulated chunks to work together but coninued to get an error for each of the python chunks and the R chunks that used information from the python code chunks. I would like to demonstrate that I fully understand how reticulate allows us to switch back and forth between python and R using p$ and r.. By calling back to code from different sections we are able to use seaborn to visualize a dataset that has been manipulated in R and we can do it the otehr way around. I unfortunately don't have the space on my computer to download R so I cannot run R locally at this time. I hope I was able to explain what reticulate and through the code I have above. 
 ```
