--- a/post/2020-12-11-first-post.Rmd
+++ b/post/2020-12-11-first-post.Rmd
@@ -14,6 +14,7 @@ description: ''
 #R
 library(reticulate)
 quakes<-quakes
+head(quakes)
 ```
 
 
@@ -22,5 +23,9 @@ quakes<-quakes
 r.quakes.mag.median()
 ```
 
+```{python}
+#python
+r.quakes.mag.max()
+```
 
 
